Don't use Lam-Alef ligatures when shaping arabic letters

ICU automatically shapes the two letters Lam and Alef to a single ligature,
so it is necessary to undo it.

BUG: 478181